--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ error.003=Book Save Failed
 error.004=User Credentials Not Found in System
 error.005=Book ISBN Not Found in System
 error.006=Member Not Found in System
+error.007=Member Save Failed
